moved bottom border of homepage splash up sightly to avoid gap

--- a/src/home/components/Splash/styles/splash.scss
+++ b/src/home/components/Splash/styles/splash.scss
@@ -59,11 +59,11 @@
     linear-gradient(-45deg, transparent 75%, #2e2f30 76%) 0 50%;
   background-repeat: repeat-x;
   background-size: 1em 1em, 1em 1em;
+  bottom: -5.97em;
   content: ' ';
   display: block;
   height: 1em;
   position: relative;
-  bottom: -6em;
   width: 100%;
   z-index: 1;
 }
